<resources>
    <string name="app_name">ServiceSide</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main">首页</string>
    <string name="bring"> 我的信息</string>
    <string name="take">扇贝听力</string>
    <string name="message">联系我们</string>
    <string name="login"></string>

    <string name="yanhuo">扇贝单词</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_courier_bring_detail">CourierBringDetailActivity</string>
    <string name="title_activity_courier_take_detail">CourierTakeDetailActivity</string>
    <string name="title_activity_yanhuo_detail">YanhuoDetailActivity</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="appname">再易</string>
    <string name="scan_text">扫描中</string>
    <string name="text_get_people">收货人：</string>

</resources>
